k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventoday
  namespace: eventoday
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: eventoday-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - eventoday.duckdns.org
      secretName: eventoday-tls
  rules:
    - host: eventoday.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eventoday-be
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventoday-fe
                port:
                  number: 80
